Plugin Name: Membership 2
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.1.2
----------------------------------------------------------------------
- Improved the details in the Pro-Rating Add-on with short instructions
- Fix a bug in Pro-Rating Add-on to correctly apply discount from now on

1.0.1.1
----------------------------------------------------------------------
- Add a new Automated Email Response: User account created (i.e. welcome email)
- Add a warning when BuddyPress pages conflict with M2 Membership pages
- Add a warning when M2 is installed in an deprecated directory (can cause conflicts)
- Fix detection of valid subscriptions to fix issues with subscriptions getting expired too early
- Fix the BuddyPress registration form/workflow
- Fix the Profile Fields Add-on, now settings are actually saved
- Fix Invitation Code Add-on to not automatically change existing codes upon saving
- Fix bug that prevented deleting invoices
- Fix a bug that would temporarily grant access to a membership when user cancels payment
- Fix a bug that created duplicate email templates every time an email was sent
- Fix a bug in the reset-script that would delete too much data in multisite installs (see Help > Advanced Settings)
- Fix a wrong action hook used in registration form that would display wrong fields when certain plugins are activated
- Fix a PHP warning on Membership 2 pages about "invalid argument in foreach"

1.0.1.0
----------------------------------------------------------------------
- Add gateway: 2Checkout
- Add new Add-on for WPML integration
- Add new Add-on to enable Pro-Rating when switching memberships
- Add new Add-on to allow Search Engines to index protected content
- Add new Add-on to customize the Registration Form and User Profile Fields
- Add new Add-on that allows creation of custom Membership Attributes